# polygon-data

./: Cargo.toml  Makefile.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
config/: all-tickers.yaml  tickers.yaml
lib/: Cargo.toml
lib/src/: client.rs  config.rs  error.rs  lib.rs  service.rs  types.rs
