[workspace]
members = ["cli", "lib"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Tom Harmon tom@harmon.tech"]
edition = "2021"

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
csv = "1.3.0"
derive_builder = "0.20.0"
displaydoc = "0.2.5"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
indicatif = "0.17.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "fs", "macros", "io-util"] }
tracing-appender = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
anyhow = "1.0.86"
serde_yaml = "0.9.34"
toml = "0.8.19"
serde_json = "1.0.125"
rust_decimal = { version = "1.36.0", features = ["serde-arbitrary-precision"] }