[package]
name = "polygon-data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
clap.workspace = true
derive_builder.workspace = true
displaydoc.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
indicatif.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
rust_decimal.workspace = true
csv.workspace = true
